--- a/style.css
+++ b/style.css
@@ -9,16 +9,50 @@
 }
 
 section{
+    position: relative;
     padding: 30px;
     width: 70vw;
-    border: 2px solid red;
+    border: 2px solid rgb(215, 168, 168);
     border-radius: 10px;
-    box-shadow: 3px 3px 20px black;
-    background-color: rgb(240, 216, 216);
+    box-shadow: 2px 2px 5px rgb(56, 56, 56);
+    background-color: rgb(229, 223, 223);
 }
 
 section p{
     text-indent: 40px;
     text-align: justify;
     font-size: x-large;
+}
+
+section .cancel{
+    padding-top: 4px;
+    color: beige;
+    background-color: brown;
+    text-align: center;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    font-size: large;
+    border: 1px solid black;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    box-shadow: 3px 3px 3px rgb(61, 61, 61);
+    cursor:pointer;
+    transition: all 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+section .cancel:hover{
+    border: 1px solid rgb(53, 53, 53);
+    background-color: rgb(234, 42, 42);
+    scale: 1.1;
+}
+
+section .cancel:active{
+    transform: translateY(5px);
+}
+
+section .cancel span{
+    width: 100%;
+    height: 100%;
 }
